--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <color name="myColor">#F5F5F5</color>
+
     <string name="app_name">Arya</string>
     <string name="action_settings">Settings</string>
     <string name="title_section1">Section 1</string>
     <string name="title_section2">Section 2</string>
     <string name="title_section3">Section 3</string>
-    <color name="myColor">#F5F5F5</color>
     <string name="celsius">to Celsius</string>
     <string name="fahrenheit">to Fahrenheit</string>
     <string name="calc">Calculate</string>
-      <string name="graphicsButtonLabel">Switch to OpenGL Activity</string>  
+    <string name="graphicsButtonLabel">Switch to OpenGL Activity</string>
+    <string name="app_description">Laz\'s Android development playground</string>
 
 </resources>
